--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,7 @@
           </provides>
           <requires>
             <require>miniconda-3.8.3</require>
+            <require>idl</require>
           </requires>
         </configuration>
       </plugin>
