--- a/pom.xml
+++ b/pom.xml
@@ -2,230 +2,65 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.ingv</groupId>
-  <artifactId>dcs-stemp</artifactId>
+  <artifactId>dcs-stemp-l8</artifactId>
   <packaging>pom</packaging>
-  <name>dcs-stemp</name>
+  <name>dcs-stemp-l8</name>
+  <parent>
+      <groupId>com.terradue</groupId>
+      <artifactId>dcs-python-parent</artifactId>
+      <version>2.0.0</version>
+  </parent>
   <description>Land surface temperature map (Celsius degrees) obtained by multi-spectral optical sensors (LANDSAT8) generated in GeoTIFF format</description>
   <version>1.0.6-SNAPSHOT</version>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.deploy.skip>true</maven.deploy.skip>
+    <summary>Land surface temperature map (Celsius degrees) obtained by multi-spectral optical sensors (LANDSAT8) generated in GeoTIFF format</summary>
+    <description>Land surface temperature map (Celsius degrees) obtained by multi-spectral optical sensors (LANDSAT8) generated in GeoTIFF format</description>
+    <community>geohazards-tep</community>
+    <yumRepo>geohazards-tep</yumRepo>
   </properties>
-  <repositories>
-    <repository>
-      <id>repository.terradue.com</id>
-      <name>repository.terradue.com-releases</name>
-      <url>http://repository.terradue.com/artifactory/libs-release-public</url>
-      <releases>
-        <checksumPolicy>warn</checksumPolicy>
-      </releases>
-    </repository>
-  </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <snapshots/>
-      <id>repository.terradue.com</id>
-      <name>repository.terradue.com-releases</name>
-      <url>http://repository.terradue.com/artifactory/libs-release-public</url>
-    </pluginRepository>
-  </pluginRepositories>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>2.5</version>
-        <configuration>
-          <filesets>
-            <fileset>
-              <directory>/application</directory>
-              <includes>
-                <include>**/*</include>
-              </includes>
-              <excludes>
-                <exclude>**/share/**</exclude>
-              </excludes>
-              <followSymlinks>false</followSymlinks>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.6</version>
-        <executions>
-          <execution>
-            <id>copy-app-resources</id>
-            <phase>install</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>/application</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${basedir}/src/main/app-resources/</directory>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.6</version>
-        <executions>
-          <execution>
-            <id>create target</id>
-            <phase>initialize</phase>
-            <configuration>
-              <target>
-                <mkdir dir="${project.build.directory}"/>
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>change perm</id>
-            <phase>install</phase>
-            <configuration>
-              <target>
-                <chmod dir="/application" includes="**/run" perm="755"/>
-                <chmod dir="/application" includes="**/*.py" perm="755"/>
-                <chmod dir="/application" includes="**/*.sh" perm="755"/>
-                <chmod file="/application/application.xml" perm="664"/>
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.3.1</version>
-        <executions>
-          <execution>
-            <id>do package list</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <executable>conda</executable>
-              <arguments>
-                <argument>list</argument>
-                <argument>-e</argument>
-              </arguments>
-              <outputFile>${project.build.directory}/package.list</outputFile>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>rpm-maven-plugin</artifactId>
-        <version>2.1.2</version>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>generate-rpm</id>
-            <goals>
-              <goal>rpm</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <copyright>${project.inceptionYear}, Terradue, GPL</copyright>
-          <distribution>Terradue ${project.inceptionYear}</distribution>
-          <group>scoop</group>
-          <packager>Terradue</packager>
-          <name>${project.artifactId}</name>
-          <defaultDirmode>775</defaultDirmode>
-          <defaultFilemode>644</defaultFilemode>
-          <defaultUsername>root</defaultUsername>
-          <defaultGroupname>root</defaultGroupname>
-          <autoRequires>false</autoRequires>
-          <autoProvides>false</autoProvides>
-          <defineStatements>
-            <defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
-          </defineStatements>
-          <description>Land surface temperature map (Celsius degrees) obtained by multi-spectral optical sensors (LANDSAT8) generated in GeoTIFF format</description>
-          <summary>DCS STEMP</summary>
-          <executions>
-            <execution>
-              <id>generate-rpm</id>
-              <goals>
-                <goal>rpm</goal>
-              </goals>
-            </execution>
-          </executions>
-          <mappings>
-            <mapping>
-              <directory>/application</directory>
-              <sources>
-                <source>
-                  <location>${basedir}/src/main/app-resources/</location>
-                </source>
-              </sources>
-            </mapping>
-            <mapping>
-              <directory>/application</directory>
-              <sources>
-                <source>
-                  <location>${basedir}/src/main/app-resources</location>
-                  <includes>
-                    <include>application.xml</include>
-                  </includes>
-                </source>
-              </sources>
-              <filemode>664</filemode>
-            </mapping>
-            <mapping>
-              <directory>/application</directory>
-              <sources>
-                <source>
-                  <location>${basedir}/src/main/app-resources</location>
-                  <includes>
-                    <include>**/run</include>
-                    <include>**/*.py</include>
-                    <include>**/*.sh</include>
-                  </includes>
-                </source>
-              </sources>
-              <filemode>755</filemode>
-            </mapping>
-            <mapping>
-              <directory>/application/dependencies</directory>
-              <sources>
-                <source>
-                  <location>${project.build.directory}/package.list</location>
-                </source>
-              </sources>
-            </mapping>
-          </mappings>
-          <postinstallScriptlet>
-            <script>sudo conda install -y --file /application/dependencies/package.list</script>
-          </postinstallScriptlet>
-          <provides>
-            <provide>${project.artifactId}</provide>
-          </provides>
-          <requires>
-            <require>miniconda</require>
-            <require>idl</require>
-            <require>openjpeg2</require>
-            <require>bc</require>
-            <require>MODTRAN</require>
-            <require>STEMP</require>
-          </requires>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <scm>
+    <connection>scm:git:ssh://git@github.com/geohazards-tep/dcs-stemp-l8</connection>
+    <developerConnection>scm:git:ssh://git@github.com/geohazards-tep/dcs-stemp-l8</developerConnection>
+    <url>https://github.com/geohazards-tep/dcs-stemp-l8</url>
+    <tag>HEAD</tag>
+  </scm>
+  <profiles>
+    <profile>
+      <id>package-app</id>
+      <activation>
+        <property>
+          <name>env</name>
+          <value>ci</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>rpm-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>generate-rpm</id>
+                <phase>compile</phase>
+                <goals>
+                  <goal>rpm</goal>
+                </goals>
+                <configuration>
+                  <!-- Set here the dependencies installed with 'sudo yum install'-->
+                  <requires>
+	            <require>openjpeg2</require>
+	            <require>bc</require>
+	            <require>idl</require>
+                    <require>miniconda</require>
+                    <require>MODTRAN</require>
+                    <require>STEMP</require>
+                  </requires>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
