--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <version>2.0.0</version>
   </parent>
   <description>Land surface temperature map (Celsius degrees) obtained by multi-spectral optical sensors (LANDSAT8) generated in GeoTIFF format</description>
-  <version>1.1.3</version>
+  <version>1.1.4-SNAPSHOT</version>
   <properties>
     <summary>Land surface temperature map (Celsius degrees) obtained by multi-spectral optical sensors (LANDSAT8) generated in GeoTIFF format</summary>
     <description>Land surface temperature map (Celsius degrees) obtained by multi-spectral optical sensors (LANDSAT8) generated in GeoTIFF format</description>
